added findSingleAriticle endpoint
